fix alignment issue with winner address / ens name on mobile noun profile (not currnent noun on auction)

--- a/packages/nouns-webapp/src/components/Winner/Winner.module.css
+++ b/packages/nouns-webapp/src/components/Winner/Winner.module.css
@@ -52,4 +52,8 @@
   .leftCol {
     padding-left: 0.75rem;
   }
+
+  .winnerContent {
+    margin-right: 0.5rem;
+  }
 }
